[gd_scene load_steps=9 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Background_TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/title_screen_title.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/buttonLong_beige.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/buttonLong_beige_pressed.png" type="Texture" id=6]


[sub_resource type="Gradient" id=1]

colors = PoolColorArray( 0.00392157, 0.0196078, 0.0823529, 1, 0.00392157, 0.509804, 1, 1 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
texture = SubResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 320, 160 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 327680, 0, 1, 327681, 0, 65538, 393216, 0, 65540, 393217, 0, 65541, 393234, 0, 65537, 393235, 0, 1, 458752, 0, 65536, 458753, 0, 65541, 458770, 0, 65539, 458771, 0, 65536, 524288, 0, 65540, 524289, 0, 65541, 524306, 0, 65539, 524307, 0, 65540, 589824, 0, 1, 589825, 0, 1, 589826, 0, 65538, 589829, 0, 65537, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 2, 589838, 0, 5, 589841, 0, 3, 589842, 0, 4, 589843, 0, 4 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 130 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 20.0
margin_right = 311.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 127.0
margin_top = 58.0
margin_right = 175.0
margin_bottom = 88.0
size_flags_horizontal = 4
custom_constants/separation = 6

[node name="start_button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 48.0
margin_bottom = 12.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/start_button"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Start"
align = 1

[node name="exit_button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 30.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/exit_button"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Exit"
align = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/exit_button" to="." method="_on_exit_button_pressed"]
